<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PlansTracker</string>
    <string name="title_activity_main">Plans Tracker</string>
    <string name="action_export">Export list</string>
    <string name="exporting">Exporting in progress&#8230;</string>
    <string name="refresh_data">refresh</string>
    <string name="title_activity_details">Details</string>
    <string name="img_name">contact name</string>
    <string name="img_phone">phone number</string>
    <string name="img_email">Email</string>
    <string name="img_price">Price</string>
    <string name="img_hours">Hours</string>
    <string name="edit_data">edit</string>
	<string name="task_date">event date</string>
	<string name="save_data">save changes</string>
    <string name="delete_data">delete task</string>
    <string name="data_comment">Note</string>
    <string name="img_contact">picture</string>
    <string name="more">Location/Picture</string>
    <string name="less">Hide</string>
    <string name="update_location"> Update location</string>
    <string name="current_location">Current location: undefined</string>
    <string name="add_newtask">ADD NEW TASK</string>
    <string name="changes_saved">Changes saved</string>
    <string name="task_deleted">Deleted</string>
    <string name="alert_nocamera">No camera found</string>
    <string name="saved_in_downloads">saved in Downloads</string>
    <string name="print_not_exp">Excel report not exported.</string>
</resources>
