<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent" 
       android:layout_height="match_parent"
       android:id="@+id/frameLayout0">
<!--  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="#808080"
    android:id="@+id/linearLayout0">-->
    <LinearLayout
            android:id="@+id/details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <ImageView
                android:contentDescription="@string/img_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_name"
                android:id="@+id/btnContact"
                />
            <AutoCompleteTextView
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" >
                <requestFocus />
            </AutoCompleteTextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <ImageView
                android:contentDescription="@string/img_phone"
                android:id="@+id/btnPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone"
                />
            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" >
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <ImageView
                android:contentDescription="@string/img_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email"
                />
            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" >
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <ImageView
                android:contentDescription="@string/img_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_money"
                />
            <EditText
                android:id="@+id/edt_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal" >
            </EditText>
            <ImageView
                android:contentDescription="@string/img_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clock"
                />
            <EditText
                android:id="@+id/edt_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="numberDecimal" >
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <ImageView
                android:contentDescription="@string/data_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_memo"
                />
            <EditText
                android:id="@+id/edtMemo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_edit"
                android:contentDescription="@string/edit_data"
                android:scaleType="center"
                android:id="@+id/btnEdit"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_save"
                android:contentDescription="@string/save_data"
                android:scaleType="center"
                android:id="@+id/btnSave"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_delete"
                android:contentDescription="@string/delete_data"
                android:scaleType="center"
                android:id="@+id/btnDelete"/>
        </LinearLayout>
    </LinearLayout>
    
    <SlidingDrawer
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:content="@+id/content"
        android:handle="@+id/handle"
         >
        <ToggleButton
            android:id="@+id/handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/less" 
            android:textOff="@string/more"
            />
        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <ImageView
                android:contentDescription="@string/img_contact"
                android:id="@+id/btnPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@drawable/btn_refresh"
                android:id="@+id/btnRefreshLocation"
                android:contentDescription="@string/refresh_data"
                android:scaleType="center"/>
            <ProgressBar
                android:id="@+id/address_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone" />
            </LinearLayout>
            <TextView 
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="5"
                />
        </LinearLayout>
    </SlidingDrawer>

<!--</LinearLayout>-->
</FrameLayout>